--- a/LMS Cours Api/package.json
+++ b/LMS Cours Api/package.json
@@ -12,8 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-status-codes": "^2.3.0",
+    "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
   },
